working-assets/css/global.css
/* ... */
/* SEARCH  */

input {
    color: var(--c-black);
    &:focus {
        outline: 1px solid var(--c-black);
            ;
    }

    &::-webkit-search-cancel-button {
        display: none;
    }
}

predictive-search {
    display: flex;
    flex-direction: column;
    width: 100%;
    position: absolute;
    min-height: 50px;
    max-height: calc(95dvh - 50px);
    overflow: hidden;
    top: -1px;
    opacity: 0;
    visibility: hidden;
    background-color: var(--c-white);
    z-index: -1;
    transition: top .2s var(--bezier), opacity .2s ease;

    &[aria-hidden="false"] {
        opacity: 1;
        top: 50px;
    }

    &:focus {
        outline: none;
    }
}

#search_form,
#search_page-form {
    display: flex;
    justify-content: center;
    margin: 1.5em auto;
    gap: 1em;
    padding: 0;
    max-width: 90vw;

    & .search_form-close,
    & .search_form-terms-input {
        margin: 0 0 0 auto
    }

    & .search_form-terms-input {
        flex: 1 0 auto;
        width: 20ch;
        max-width: 800px;
        border: none;
        border-bottom: 1px solid var(--c-black);
        font-size: var(--txt-h4);
        padding: 0.5em;
        background-color: transparent;

        &:focus {
                outline: none;
        }
    }

    & button {
        display: grid;
        place-content: center;
        margin: 0;

        & svg {
            max-height: 20px;
        }
    }
}

.predictive-search--results {
    flex: 1 1 auto;
    overflow: auto;

    & .predictive_search-terms {
        display: flex;
        place-items: center;
        justify-content: center;
        margin: 0 auto;
        padding: 0 0 9px;
        column-gap: 0.5em;

        & p {
            flex: 0 0 max-content;
        }
    }

    & .predictive_search-terms-list {
        margin-top: 0;
        flex-wrap: wrap;
        scrollbar-width: none;
        margin: 0;
        justify-content: normal;
        gap: 0.5em;

        & li {
            flex: 0 0 max-content;
            display: grid;
            place-content: center;
        }

        & a {
            padding: 0.5em 1em;
            border-radius: 15px;
            background-color: var(--c-off-white);
        }
    }



    & .predictive_search-heading {
        grid-column: 1 / -1;
        background-color: var(--c-off-white);
        color: var(--c-dark-grey);
        padding: 0.75em;
        margin: 0.5em 0;
        text-align: left;
        font-size: var(--txt-p);
        display: none;

            &:has(+*) {
                display: block;
            }
    }

    & .predictive-search__container,
    & .predictive_search-products {
        padding: 0 1em;
&:last-child {
        margin-bottom: 1rem;
    }
    }

    & .predictive_search-products {
        height: 100%;
        overflow: auto;
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(175px, 1fr));
        gap: 0 0.5em;

        &>p {
            margin: 2em 0;
        }
    }

    & .predictive_search-view-all {
        width: 100%;
        display: flex;
        justify-content: flex-end;
        align-items: center;
        gap: 0.5em;
        color: var(--c-dark-grey);
        border-top: 1px solid var(--c-light-grey);
        margin: 0;
        position: sticky;
        bottom: 0;
    }
}

.predictive_search-section {
    & ul {
        justify-content: flex-start;
        margin-left: 2em;
        flex-flow: column nowrap;
    }
}

@media screen and (width >=575px) {
    .predictive-search--results .predictive_search-products {
        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    }
}

@media screen and (width >=800px) {
    .predictive_search-grid {
        display: flex;
        flex-flow: row-reverse nowrap;
        position: relative;

        & .predictive-search__container:has(.predictive_search-section) {
            width: max(250px, 25%);
            position: sticky;
            top: 0;
            height: fit-content;
        }

        & .predictive_search-products {
            flex: 1;
            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
        }
    }
}

/* PREDICTIVE SEARCH SKELETON */
.predictive-search--skeleton {
    padding: 1rem;
    overflow: hidden;
    width: 100%;
}

.predictive-search--skeleton .predictive_search-grid {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
}

@media screen and (width >=800px) {
    .predictive-search--skeleton .predictive_search-grid {
        flex-flow: row-reverse nowrap;
    }

    .predictive-search--skeleton .skeleton-links {
        width: 25%;
        min-width: 250px;
    }

    .predictive-search--skeleton .skeleton-products {
        flex: 1;
    }
}

.skeleton-shimmer {
    background: #f6f7f8;
    background-image: linear-gradient(
        to right,
        #f6f7f8 0%,
        #edeef1 20%,
        #f6f7f8 40%,
        #f6f7f8 100%
    );
    background-repeat: no-repeat;
    background-size: 800px 100%;
    animation-duration: 1.5s;
    animation-fill-mode: forwards;
    animation-iteration-count: infinite;
    animation-name: placeholderShimmer;
    animation-timing-function: linear;
    border-radius: 4px;
}

@keyframes placeholderShimmer {
    0% { background-position: -468px 0; }
    100% { background-position: 468px 0; }
}

.skeleton-heading {
    height: 24px;
    width: 40%;
    margin-bottom: 1rem;
}

.skeleton-card {
    height: 350px;
    width: 100%;
    margin-bottom: 1rem;
}

.skeleton-list-item {
    height: 18px;
    width: 80%;
    margin-bottom: 0.75rem;
}

/* ACCORDION */

content-accordian {
    margin: 30px 0;
    display: block;
    font-size: var(--txt-h4);
}

.accordian-item {
    border-bottom: 1px solid var(--c-light-grey);

    &:first-child {
        border-top: 1px solid var(--c-light-grey);
    }

    &.active {
        & svg {
            transform: rotate(0);
            color: var(--c-dark-grey)
        }
    }
}
/* ... */

